objects/CastLight_Connection_Details__mdt.object
<CustomObject>
    <fields>
        <fullName>AccessToken__c</fullName>
        <label>AccessToken URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Password__c</fullName>
        <label>Application Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Username__c</fullName>
        <label>Application Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oauth_URL__c</fullName>
        <label>Oauth URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_EndPoint__c</fullName>
        <label>Service EndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Timeout__c</fullName>
        <label>Session Timeout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokenRefreshTime__c</fullName>
        <label>TokenRefreshTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CastLight Connection Details</label>
    <pluralLabel>CastLight Connection Details</pluralLabel>
</CustomObject>